--- a/server/tests-py/queries/v1/insert/permissions/author_student_role_insert_check_bio_fail.yaml
+++ b/server/tests-py/queries/v1/insert/permissions/author_student_role_insert_check_bio_fail.yaml
@@ -5,7 +5,7 @@ headers:
   X-Hasura-Role: student
 response:
   path: $.args
-  error: Check constraint violation. insert check constraint failed
+  error: Insert permission check failed
   code: permission-error
 query:
   type: insert
