Fix vulnerabilities reported

--- a/console/package.json
+++ b/console/package.json
@@ -62,6 +62,7 @@
     "hasura-console-graphiql": "0.0.10",
     "history": "^3.0.0",
     "hoist-non-react-statics": "^1.0.3",
+    "inflection": "^1.12.0",
     "invariant": "^2.2.0",
     "isomorphic-fetch": "^2.2.1",
     "less": "^3.7.1",
@@ -69,7 +70,7 @@
     "map-props": "^1.0.0",
     "match-sorter": "^2.3.0",
     "multireducer": "^1.0.2",
-    "piping": "^0.3.0",
+    "piping": "^0.3.2",
     "prettier": "^1.16.4",
     "pretty-error": "^1.2.0",
     "prop-types": "^15.6.0",
@@ -122,7 +123,7 @@
     "@babel/runtime": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.0",
-    "babel-plugin-istanbul": "^4.1.6",
+    "babel-plugin-istanbul": "^5.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
     "babel-plugin-typecheck": "^2.0.0",
     "better-npm-run": "^0.1.0",
@@ -131,7 +132,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.11",
-    "cypress": "^3.1.0",
+    "cypress": "^3.2.0",
     "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "16.1.0",
@@ -156,7 +157,7 @@
     "lint-staged": "^6.1.1",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.2",
-    "nyc": "^12.0.2",
+    "nyc": "^13.3.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "react-a11y": "^0.2.6",
     "react-addons-test-utils": "^15.0.3",
